--- a/src/style/pages/productPage.scss
+++ b/src/style/pages/productPage.scss
@@ -184,6 +184,10 @@
     }
     .shop-wraper {
       .heading {
+        display: none;
+        &.active {
+          display: block;
+        }
         p {
           text-transform: capitalize;
           span {
