--- a/src/App.scss
+++ b/src/App.scss
@@ -19,7 +19,7 @@ html {
 }
 
 body {
-  font-size: 14px;
+  font-size: 1.4rem;
   line-height: 1.4;
   color: var(--white) !important;
   font-family: "Prata", serif;
@@ -30,7 +30,7 @@ body {
     background-color: var(--primary-color);
   }
   &::-webkit-scrollbar-track {
-    -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
+    -webkit-box-shadow: inset 0 0 0.6rem rgba(0, 0, 0, 0.3);
     background-color: #f5f5f5;
   }
 }
@@ -43,7 +43,7 @@ body {
     background-color: var(--primary-color);
   }
   &::-webkit-scrollbar-track {
-    -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
+    -webkit-box-shadow: inset 0 0 0.6rem rgba(0, 0, 0, 0.3);
     background-color: #f5f5f5;
   }
 }
@@ -94,7 +94,7 @@ ul {
   margin: 0 -1.5rem !important;
 }
 
-.btn{
+.btn {
   position: relative;
 
   display: grid;
@@ -142,14 +142,14 @@ ul {
 
 .border-btn {
   border: none;
-  padding: .2rem;
+  padding: 0.2rem;
   white-space: nowrap;
-  span{
+  span {
     color: #fff;
     width: 100%;
     height: 100%;
     z-index: 2;
-    @include flex(center,center);
+    @include flex(center, center);
     background-color: #000;
   }
   &:hover > span {
@@ -180,6 +180,54 @@ ul {
       #00ccff
     );
     animation: rotage 4s linear -2s infinite;
+  }
+}
+
+.cta {
+  border: none;
+  background: none;
+  span {
+    padding-bottom: 0.6rem;
+    letter-spacing: 0.2rem;
+    font-size: 1.2rem;
+    padding-right: 1.5rem;
+    text-transform: uppercase;
+    color: var(--white);
+  }
+  svg {
+    transform: translateX(-0.8rem);
+    transition: all 0.3s ease;
+  }
+  &:hover {
+    svg {
+      transform: translateX(0);
+    }
+    .hover-underline-animation:after {
+      transform: scaleX(1);
+      transform-origin: bottom left;
+    }
+  }
+  &:active {
+    svg {
+      transform: scale(0.9);
+    }
+  }
+  .hover-underline-animation {
+    position: relative;
+    color: var(--white);
+    padding-bottom: 0.6rem;
+    &::after {
+      content: "";
+      position: absolute;
+      width: 100%;
+      transform: scaleX(0);
+      height: 0.2rem;
+      bottom: 0;
+      left: 0;
+      background-color: var(--white);
+      transform-origin: bottom right;
+      transition: transform 0.25s ease-out;
+    }
   }
 }
 
