--- a/src/style/pages/productPage.scss
+++ b/src/style/pages/productPage.scss
@@ -48,6 +48,18 @@
       .filter-item {
         padding: 4rem 2rem;
         margin-bottom: 4rem;
+        &.category{
+          .content{
+            form{
+              label{
+                display: none;
+                &.active{
+                  display: block;
+                }
+              }
+            }
+          }
+        }
         &:hover,
         &.active {
           .title {
@@ -181,6 +193,7 @@
           }
         }
       }
+
     }
     .shop-wraper {
       .heading {
