--- a/src/style/components/header.scss
+++ b/src/style/components/header.scss
@@ -148,7 +148,7 @@ header {
                 top: 1.2rem;
                 left: 0.6rem;
                 span {
-                  transform: translateY(.16rem);
+                  transform: translateY(0.16rem);
                 }
               }
             }
@@ -508,6 +508,7 @@ header {
                       a {
                         padding: 1.3rem 0 1.5rem 5rem;
                         width: 100%;
+                        text-transform: capitalize;
                       }
                       &:hover {
                         background: var(--primary-color);
