--- a/src/style/pages/productPage.scss
+++ b/src/style/pages/productPage.scss
@@ -3,6 +3,15 @@
   .loading {
     height: 100vh;
     @include flex(center, center);
+    &.f-load{
+      background: rgba(255, 255, 255, 0.5);
+      position: fixed;
+      top: 0;
+      left: 0;
+      right: 0;
+      bottom: 0;
+      z-index: 999999;
+    }
     #loading {
       margin: 0;
     }
