--- a/src/style/components/header.scss
+++ b/src/style/components/header.scss
@@ -116,6 +116,25 @@ header {
         }
       }
       .hd-menu {
+        .drop {
+          position: absolute;
+          top: 100%;
+          right: 0;
+          padding: 1.6rem;
+          box-shadow: 0 0 50px 0 rgb(0 0 0 / 10%);
+          left: auto;
+          display: none;
+          opacity: 0;
+          transition: all 0.3s;
+          &::after {
+            content: "";
+            width: 11rem;
+            position: absolute;
+            top: -3rem;
+            right: 0;
+            height: 3rem;
+          }
+        }
         .menu-list {
           @include flex(center, space-between);
           .menu-item {
@@ -168,23 +187,9 @@ header {
               }
             }
             .cart-dropw-down {
-              position: absolute;
-              top: 100%;
-              right: 0;
-              padding: 1.6rem;
               width: 35rem;
-              box-shadow: 0 0 50px 0 rgb(0 0 0 / 10%);
-              left: auto;
-              display: none;
-              opacity: 0;
-              transition: all 0.3s;
               &::after {
-                content: "";
-                width: 11rem;
-                position: absolute;
-                top: -3rem;
-                right: 0;
-                height: 3rem;
+                right: 8rem;
               }
               .cart-empty {
                 img {
@@ -367,6 +372,17 @@ header {
                 }
               }
             }
+          }
+          .user {
+            &:hover {
+              .user-dropw-down {
+                display: block;
+                opacity: 1;
+              }
+            }
+            .user-dropw-down {
+                min-width: 20rem;
+              }
           }
         }
       }
